Bumping down the modal top to avoid getting cutoff by Safari load bounce.

--- a/app/assets/stylesheets/application-responsive.css.scss
+++ b/app/assets/stylesheets/application-responsive.css.scss
@@ -105,6 +105,7 @@
   }
 
   .modal {
+    &.fade.in { top: 80px; }
     .modal-body {
       .step { margin-top: 0; }
       .intro .buttons { margin-top: 80px; }
